# buffer_overflow_sim

./: CMakeLists.txt
access_manager/: CommandManager.cpp  CommandManager.h  compile command.txt  config.h  main  main.cpp
access_manager/config/: config.txt  config.txtbackup  log.txt
access_manager/files/: fe  file1  file2
access_manager/models/BLP/config/: config.txt  config.txtbackup  log.txt
access_manager/models/BLP/files/: file1  file2  file3
access_manager/models/RBAC/config/: config.txt  config.txtbackup  log.txt
access_manager/models/TEST/config/: config.txt  config.txtbackup  log.txt
application/: CMakeLists.txt
application/src/: Application.cpp  Application.h  Border.cpp  Border.h  Button.cpp  Button.h  Console.cpp  Console.h  ConsoleProccess.cpp  GDBController.cpp  GDBController.h  GDBInterface.cpp  GDBInterface.h  InputLine.cpp  InputLine.h  Panel.cpp  Panel.h  Paragraph.cpp  Paragraph.h  StackVisualizer.cpp  StackVisualizer.h  Table.cpp  Table.h  TextBlock.cpp  TextBlock.h  TextLine.cpp  TextLine.h  Widget.cpp  Widget.h  main.cpp
application/src/BOApplication/: BOApplication.cpp  BOApplication.h  ConsoleProccess.h  GDBController.cpp  GDBController.h  Main.cpp
application/src/PEApplication/: Main.cpp  PEApplication.cpp  PEApplication.h
core/: CMakeLists.txt
core/src/: InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  config.h
debug_from_code/: main  main.cpp  tst  tst.c
exmpl debug via code/: dmp_asm  dmp_asm.cpp  target  target.c
targets/compiled/: nt  t
targets/src/: compile command.txt  main.c
targets/src/Task_one/: compile comm.txt  compile_command_linux.txt  compile_command_win.txt
targets/src/Task_one/tst/: aes_core.c  aes_decrypt.c  aes_encrypt.c  aes_utils.h  main  main.c
targets/src/Task_one/tst2/: main.c
targets/src/Task_one/vulnerable_system/: Database.c  Pages.h  SecureDB.c  SecureDB.h  aes_core.c  aes_decrypt.c  aes_encrypt.c  aes_utils.h  main  main.c  t1  user_types.h
targets/src/Task_one/vulnerable_system/database/: SystemDB-bup.db  SystemDB.db
targets/src/vulnerable_system/: Database.c  Database.h  aes_utils.h  main.c
vulnerable_system/: Database.c  Databse.h  Pages.h  aes_utils.c  main.c  user_types.h
vulnerable_system/database/: SystemDB.db
